--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="big-box">
     <form>
       <label for="length">How long should you password be?</label><br />
       <input type="number" id="length" name="length" /><br />
@@ -19,9 +20,10 @@
       <input type="checkbox" id="special" name="special" value="Spec" />
       <label for="special"> Has special characters?</label><br />
       <button id="button" type="button" value="Submit">Submit</button>
+
+      <h1 id="password"></h1>
     </form>
     <br />
-    <h1 id="password"></h1>
     <script src="index.js"></script>
   </body>
 </html>
