--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Password</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="big-box">
-    <form>
-      <label for="length">How long should you password be?</label><br />
-      <input type="number" id="length" name="length" /><br />
-      <input type="checkbox" id="upper" name="upper" value="Upper" />
-      <label for="upper"> Upper case letters </label><br />
-      <input type="checkbox" id="lower" name="lower" value="LowerCase" />
-      <label for="lower"> Lower case letters</label><br />
-      <input type="checkbox" id="number" name="number" value="num" />
-      <label for="number"> Has numbers?</label><br />
-      <input type="checkbox" id="special" name="special" value="Spec" />
-      <label for="special"> Has special characters?</label><br />
-      <button id="button" type="button" value="Submit">Submit</button>
-
-      <h1 id="password"></h1>
-    </form>
-    <br />
+  <body>
+    <div class="big-box">
+      <form>
+        <label for="length">How long should you password be?</label><br />
+        <input type="number" id="length" name="length" /><br />
+        <input type="checkbox" id="upper" name="upper" value="Upper" />
+        <label for="upper"> Upper case letters </label><br />
+        <input type="checkbox" id="lower" name="lower" value="LowerCase" />
+        <label for="lower"> Lower case letters</label><br />
+        <input type="checkbox" id="number" name="number" value="num" />
+        <label for="number"> Has numbers?</label><br />
+        <input type="checkbox" id="special" name="special" value="Spec" />
+        <label for="special"> Has special characters?</label><br />
+        <button id="button" type="button" value="Submit">Submit</button>
+      </form>
+    </div>
+    <div class="big-box"><h1 id="password"></h1></div>
     <script src="index.js"></script>
   </body>
 </html>
