added some direction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <body>
     <div class="big-box">
       <form>
-        <label for="length">How long should you password be?</label><br />
+        <h1>Welcome!</h1>
+        <h2>
+          This website will generate a custom password for you based on what you
+          input!
+        </h2>
+        <h3>
+          You can keep pressing submit till you find one that strikes your
+          fancy.
+        </h3>
+        <label for="length">How many characters should your password be?</label
+        ><br />
         <input type="number" id="length" name="length" /><br />
         <input type="checkbox" id="upper" name="upper" value="Upper" />
         <label for="upper"> Upper case letters </label><br />
